bug fixes with transaction and categories

--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -28,7 +28,7 @@
     {% else %}
     <title>Treat Yo Self</title>
     {% endif %}
-  </head>
+</head>
   <!-- end of head -->
   <body>
     {% if user.is_authenticated %}
@@ -112,5 +112,5 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-
+  </body>
 </html>
