--- a/budgeting/templates/budgeting/transaction_confirm_delete.html
+++ b/budgeting/templates/budgeting/transaction_confirm_delete.html
@@ -7,9 +7,7 @@
         Delete Transaction
       </legend>
       <h2>
-        Are you sure you want to delete the transaction: "{{ object.source }}"
-        <br />
-        {{ object.t_type}}-${{object.amount}}
+        Are you sure you want to delete the transaction: "{{ object.source }}" ?
       </h2>
     </fieldset>
     <div class="form-group">
