--- a/budgeting/static/budgetcss/main.css
+++ b/budgeting/static/budgetcss/main.css
@@ -206,8 +206,9 @@ a.article-title:hover {
 
 .background-section{
     position: absolute;
+    top: 100%;
     width: 100%;
-    height: 90%;
+    height: 210%;
     z-index: -1;
     background: rgb(255,255,255);
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(189,189,189,1) 100%);
@@ -240,4 +241,22 @@ a.article-title:hover {
     color:#02C39A;
 }
 
+.enter-balance {
+    display: flex;
+    justify-content: center;
+    padding: 3%;
+    background-color: #02C39A;
+    border-radius: 0.4rem;
+    font-size: 4rem;
+    box-shadow: 4px 4px 10px #888888;
+}
 
+.enter-balance-link{
+    color:#000000;
+    text-decoration: none;
+}
+
+.enter-balance-link:hover{
+    color:#ffffff;
+    text-decoration: none;
+}
