--- a/budgeting/static/budgetcss/main.css
+++ b/budgeting/static/budgetcss/main.css
@@ -208,7 +208,8 @@ a.article-title:hover {
     position: absolute;
     top: 100%;
     width: 100%;
-    height: 210%;
+    min-height: 100%;
+    height: 220%;
     z-index: -1;
     background: rgb(255,255,255);
     background: linear-gradient(135deg, rgba(255,255,255,1) 0%, rgba(189,189,189,1) 100%);
